додана робота з завданнями частково додана робота з частинами рефакторинг мовних файлів накидав логіку парсингу назви друкуємого файлу, котрий прийде на апі

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -144,4 +144,15 @@ a:hover {
 .badge-deleted {
   background-color: #6C757D;
 }
+.registration-success {
+  width: 100%;
+  max-width: 600px;
+}
+.registration-success .alert {
+  border: 1px solid #004d9f;
+  background-color: #002852;
+}
+.registration-success .alert-heading {
+  margin-bottom: 1rem;
+}
 
