--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -197,3 +197,17 @@ a {
         background-color: #6C757D; // Серый для удаленного пользователя
     }
 }
+
+.registration-success {
+    width: 100%;
+    max-width: 600px;
+
+    .alert {
+        border: 1px solid @card-border;
+        background-color: mix(@primary-color, @primary-bg, 10%);
+
+        &-heading {
+            margin-bottom: 1rem;
+        }
+    }
+}
