feat: implement AddPrintedCountRequest and add functionality to update printed count for task parts

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -242,4 +242,8 @@ a:hover {
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+.count-complete {
+  color: lightgreen;
+  font-weight: bold;
+}
 
