--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -246,4 +246,43 @@ a:hover {
   color: lightgreen;
   font-weight: bold;
 }
+.pagination {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0.25rem;
+}
+.pagination .page-item {
+  margin: 0 0.25rem;
+}
+.pagination .page-item.disabled .page-link {
+  color: #6c757d;
+  pointer-events: none;
+  cursor: auto;
+  background-color: #fff;
+  border-color: #dee2e6;
+}
+.pagination .page-item.active .page-link {
+  z-index: 1;
+  color: #fff;
+  background-color: #007BFF;
+  border-color: #007BFF;
+}
+.pagination .page-item .page-link {
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  color: #007BFF;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+}
+.pagination .page-item .page-link:hover {
+  z-index: 2;
+  color: #007BFF;
+  text-decoration: none;
+  background-color: #e9ecef;
+  border-color: #dee2e6;
+}
 
