--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -317,3 +317,48 @@ a {
     color: lightgreen;
     font-weight: bold;
 }
+
+.pagination {
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    border-radius: 0.25rem;
+
+    .page-item {
+        margin: 0 0.25rem;
+
+        &.disabled .page-link {
+            color: #6c757d;
+            pointer-events: none;
+            cursor: auto;
+            background-color: #fff;
+            border-color: #dee2e6;
+        }
+
+        &.active .page-link {
+            z-index: 1;
+            color: #fff;
+            background-color: @primary-color;
+            border-color: @primary-color;
+        }
+
+        .page-link {
+            position: relative;
+            display: block;
+            padding: 0.5rem 0.75rem;
+            margin-left: -1px;
+            line-height: 1.25;
+            color: @primary-color;
+            background-color: #fff;
+            border: 1px solid #dee2e6;
+
+            &:hover {
+                z-index: 2;
+                color: @primary-color;
+                text-decoration: none;
+                background-color: #e9ecef;
+                border-color: #dee2e6;
+            }
+        }
+    }
+}
