додано нову змінну для RGB кольору та оновлено стилі картки принтера

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -22,6 +22,7 @@
     --bs-secondary-bg: @secondary-bg;
     --bs-secondary-border-color: @secondary-color;
     --bs-tertiary-bg: @primary-bg;
+    --bs-light-rgb: red(@lighter-bg), green(@lighter-bg), blue(@lighter-bg);
 }
 
 html, body {
