--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -10,6 +10,7 @@
   --bs-secondary-bg: #343A40;
   --bs-secondary-border-color: #6C757D;
   --bs-tertiary-bg: #001F3F;
+  --bs-light-rgb: 12.4, 41.9, 72.35;
 }
 html,
 body {
