додано нову змінну для кольору межі та оновлено відповідні стилі

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11,6 +11,7 @@
   --bs-secondary-border-color: #6C757D;
   --bs-tertiary-bg: #001F3F;
   --bs-light-rgb: 12.4, 41.9, 72.35;
+  --bs-border-color: #004d9f;
 }
 html,
 body {
