--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -78,7 +78,13 @@ main {
   white-space: nowrap;
 }
 .table .table-count {
-  max-width: 8ch;
+  max-width: 6ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.table .table-count_two {
+  max-width: 14ch;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -395,9 +401,8 @@ a:hover {
 }
 .catalog-tree .catalog-children {
   margin-left: 1rem;
-  border-left: 1px solid #dee2e6;
+  border-left: 1px solid #DEE2E6;
 }
-/* Убираем margin у последнего вложенного списка */
 .catalog-tree .catalog-children:last-child {
   margin-bottom: 0;
 }
@@ -409,8 +414,45 @@ a:hover {
   padding: 0;
 }
 /* Стиль для активного каталога */
+.catalog-item-link {
+  color: #F8F9FA;
+}
 .catalog-item-link.active {
   font-weight: bold;
-  color: #0d6efd;
+}
+.custom-select-dropdown .dropdown-group {
+  font-weight: bold;
+  padding: 10px 15px;
+}
+.custom-select-dropdown .dropdown-menu {
+  max-height: 500px;
+  overflow-y: auto;
+}
+.custom-select-dropdown .dropdown-item {
+  white-space: normal;
+  line-height: 1.2;
+  padding: 10px 15px;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+.custom-select-dropdown .dropdown-item:hover {
+  background-color: #003872;
+  color: #ffffff;
+}
+.input-container {
+  position: relative;
+}
+.input-container .form-control {
+  padding-right: 40px;
+}
+.input-container .btn-clear-input {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  color: var(--bs-body-color);
+  cursor: pointer;
+  font-size: 1.2rem;
 }
 
