--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -500,12 +500,12 @@ a {
 .catalog-tree {
     .list-group-item {
         border: none;
-        padding: 0.5rem 0;
+        padding: 0.5rem 0 0 0;
         background: transparent;
     }
 
     .catalog-children {
-        margin-left: 1rem;
+        margin-left: 0.7rem;
         border-left: 1px solid #DEE2E6;
         //padding-left: 0.5rem;
 
