--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -505,8 +505,9 @@ a {
     }
 
     .catalog-children {
-        margin-left: 0.7rem;
-        border-left: 1px solid #DEE2E6;
+        margin-left: 0.5rem;
+        border-left: 1px solid @primary-color;
+        border-top-left-radius: 0;
         //padding-left: 0.5rem;
 
         &:last-child {
