--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -586,3 +586,11 @@ a {
         }
     }
 }
+
+[data-hover-target] {
+    opacity: 0;
+    transition: opacity 0.2s ease;
+}
+.hover-show {
+    opacity: 1 !important;
+}
