--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -80,7 +80,7 @@ main {
 
     thead {
         th {
-            color: lighten(@text-color, 20%);
+            color: @primary-color;
             vertical-align: middle;
         }
     }
@@ -593,4 +593,10 @@ a {
 }
 .hover-show {
     opacity: 1 !important;
+}
+
+h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: @primary-color;
 }
